--- a/book/_config.yml
+++ b/book/_config.yml
@@ -1,5 +1,5 @@
-title: TeachBooks template                           # Replace this with your own book title
-author: TeachBooks Team, built with <a href="https://teachbooks.io">TeachBooks</a>, <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="license noopener noreferrer"">CC BY 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt=""></a>
+title: Audio Analysis, Processing, and Synthesis     # Replace this with your own book title
+author: Randall Ali, built with <a href="https://teachbooks.io">TeachBooks</a>, <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="license noopener noreferrer"">CC BY 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt=""></a>
                                                      # Replace TeachBooks Teams with your own name in the line above
 
 execute:
@@ -9,7 +9,7 @@ only_build_toc_files: true                           # Replace this with false i
 
 
 html:
-  favicon : "figures/TB_favicon.ico"                 # Replace this with your own favicon
+  favicon : "figures/ASPSicon.ico"                   # Replace this with your own favicon
   baseurl :  "https://<user/org>.io/<repo>"          # Replace this with your own URL
 
 sphinx:                                              # Options passed on to the underlying sphinx-parser
@@ -22,9 +22,9 @@ sphinx:                                              # Options passed on to the 
     html_theme_options:
       logo:
         text: Template                               # Replace this with your own book title
-        image_light: TeachBooks_logo.svg             # Put your logo for the light mode here (can be the same as image_dark)
-        image_dark: TeachBooks_logo_inverted.svg     # Put your logo for the dark mode here (can be the same as image_light)
-      repository_url: "https://github.com/user/repo" # Add your own repo URL here
+        image_light: ASPSlogo.png             # Put your logo for the light mode here (can be the same as image_dark)
+        image_dark: ASPSlogo.png     # Put your logo for the dark mode here (can be the same as image_light)
+      repository_url: "https://github.com/randyaliased" # Add your own repo URL here
       path_to_docs: "book"                           # Required for edit_page_button, should be book if you're using TeachBooks package (https://github.com/TeachBooks/TeachBooks) or the TeachBooks deploy book workflow (https://teachbooks.io/manual/external/deploy-book-workflow/README.html)
       repository_branch: "main"                      # Replace when you change the name of your published branch (required for edit_page_button)
       use_edit_page_button: true                     # Replace with false if you don't want the edit page button (i.e. if you don't user to propose changes themselves or have a private repo)
