--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -4,28 +4,12 @@ root: intro.md
 parts:
   - caption: Contents
     chapters:
-    - file: some_content/overview.md
+    - file: fundamental/overview.md
       sections:
-      - file: some_content/JNB7_01_Sinusoidal_Model.ipynb
-      - file: some_content/text_and_code.ipynb
-    - file: exercises.md
+      - file: fundamental/JNB7_01_Sinusoidal_Model.ipynb
+      - file: fundamental/text_and_code.ipynb
+    - file: dasp/overview.md
       sections:
-      - file: exercises/001.md
-      - file: exercises/002.md
-      - file: exercises/003.md
-      - file: exercises/004.md
-      - file: exercises/005.md
-      - file: exercises/005a.md
-      - file: exercises/006.md
-      - file: exercises/summary
-    - file: syntax_exercises.md
-      sections:
-      - file: syntax_exercises/007.md
-      - file: syntax_exercises/008.md
-      - file: syntax_exercises/009.md
-      - file: syntax_exercises/010.md
-      - file: syntax_exercises/011.md
-      - file: syntax_exercises/012.md
+      - file: dasp/text_and_code.ipynb
     - file: references.md
-    - file: changelog.md
     - file: credits.md
