--- a/book/_config.yml
+++ b/book/_config.yml
@@ -21,9 +21,9 @@ sphinx:                                              # Options passed on to the 
       exclude_patterns: ["**/_*.yml", "**/*.md", "**/*.ipynb"] #exclude files which should not be accessible for live code: https://teachbooks.io/manual/features/live_code.html
     html_theme_options:
       logo:
-        text: [... ]                               # Replace this with your own book title
-        image_light: ASPSlogolight.png             # Put your logo for the light mode here (can be the same as image_dark)
-        image_dark: ASPSlogodark.png     # Put your logo for the dark mode here (can be the same as image_light)
+        text: [... ]                                 # Replace this with your own book title
+        image_light: ASPSlogolight.png               # Put your logo for the light mode here (can be the same as image_dark)
+        image_dark: ASPSlogo.png                     # Put your logo for the dark mode here (can be the same as image_light)
       repository_url: "https://github.com/randyaliased/acspjbook/" # Add your own repo URL here
       path_to_docs: "book"                           # Required for edit_page_button, should be book if you're using TeachBooks package (https://github.com/TeachBooks/TeachBooks) or the TeachBooks deploy book workflow (https://teachbooks.io/manual/external/deploy-book-workflow/README.html)
       repository_branch: "main"                      # Replace when you change the name of your published branch (required for edit_page_button)
