--- a/book/_config.yml
+++ b/book/_config.yml
@@ -23,7 +23,7 @@ sphinx:                                              # Options passed on to the 
       logo:
         text: [... ]                                 # Replace this with your own book title
         image_light: ASPSlogolight.png               # Put your logo for the light mode here (can be the same as image_dark)
-        image_dark: ASPSlogo.png                     # Put your logo for the dark mode here (can be the same as image_light)
+        #image_dark: ASPSlogo.png                     # Put your logo for the dark mode here (can be the same as image_light)
       repository_url: "https://github.com/randyaliased/acspjbook/" # Add your own repo URL here
       path_to_docs: "book"                           # Required for edit_page_button, should be book if you're using TeachBooks package (https://github.com/TeachBooks/TeachBooks) or the TeachBooks deploy book workflow (https://teachbooks.io/manual/external/deploy-book-workflow/README.html)
       repository_branch: "main"                      # Replace when you change the name of your published branch (required for edit_page_button)
