--- a/book/_config.yml
+++ b/book/_config.yml
@@ -23,7 +23,7 @@ sphinx:                                              # Options passed on to the 
       logo:
         text: [... ]                                 # Replace this with your own book title
         image_light: ASPSlogolight.png               # Put your logo for the light mode here (can be the same as image_dark)
-        #image_dark: ASPSlogo.png                     # Put your logo for the dark mode here (can be the same as image_light)
+        image_dark: ASPSlogo.png                     # Put your logo for the dark mode here (can be the same as image_light)
       repository_url: "https://github.com/randyaliased/acspjbook/" # Add your own repo URL here
       path_to_docs: "book"                           # Required for edit_page_button, should be book if you're using TeachBooks package (https://github.com/TeachBooks/TeachBooks) or the TeachBooks deploy book workflow (https://teachbooks.io/manual/external/deploy-book-workflow/README.html)
       repository_branch: "main"                      # Replace when you change the name of your published branch (required for edit_page_button)
@@ -32,6 +32,8 @@ sphinx:                                              # Options passed on to the 
       use_issues_button : true                       # Replace with false if you don't want the issues button (i.e. if you don't want to use GitHub issues or have a private repo)
       launch_buttons:
         thebe: true                                  # Required for live code: https://teachbooks.io/manual/features/live_code.html
+      use_theme_switcher: false
+      default_mode: light
     html_show_copyright: false                       # As the copyright is included in the author field
     html_last_updated_fmt: '%B %-d, %Y'              # Adds the date of the last update to the footer
     html_static_path: ["figures"]                    # Add folder that contain files that need to be included, such as the location of the logo(s)
