--- a/book/_config.yml
+++ b/book/_config.yml
@@ -32,8 +32,11 @@ sphinx:                                              # Options passed on to the 
       use_issues_button : true                       # Replace with false if you don't want the issues button (i.e. if you don't want to use GitHub issues or have a private repo)
       launch_buttons:
         thebe: true                                  # Required for live code: https://teachbooks.io/manual/features/live_code.html
-      use_theme_switcher: false
+      switcher: false
+      theme_switcher: false
       default_mode: light
+      switcher_remove: true
+      mode: light
     html_show_copyright: false                       # As the copyright is included in the author field
     html_last_updated_fmt: '%B %-d, %Y'              # Adds the date of the last update to the footer
     html_static_path: ["figures"]                    # Add folder that contain files that need to be included, such as the location of the logo(s)
