--- a/book/_config.yml
+++ b/book/_config.yml
@@ -9,7 +9,7 @@ only_build_toc_files: true                           # Replace this with false i
 
 
 html:
-  favicon : "figures/ASPSicon.ico"                   # Replace this with your own favicon
+  favicon : "figures/bookicon.ico"                   # Replace this with your own favicon
   baseurl :  "https://<user/org>.io/<repo>"          # Replace this with your own URL
 
 sphinx:                                              # Options passed on to the underlying sphinx-parser
