--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -8,6 +8,10 @@ parts:
       sections:
       - file: fundamental/01_Sinusoidal_Model.ipynb
       - file: fundamental/02_Phasors.ipynb
+      - file: fundamental/03_Fourier_Series.ipynb
+      - file: fundamental/04_Sampling.ipynb
+      - file: fundamental/05_DFT.ipynb
+      - file: fundamental/06_Time_Freq_Analysis.ipynb
     - file: dasp/overview.md
       sections:
       - file: dasp/text_and_code.ipynb
