--- a/book/_config.yml
+++ b/book/_config.yml
@@ -3,7 +3,7 @@ author: Randall Ali, built with <a href="https://teachbooks.io">TeachBooks</a>, 
                                                      # Replace TeachBooks Teams with your own name in the line above
 
 execute:
-  execute_notebooks: "off"                           # Replace this if you want don't have notebooks with output and you want to add notebook output during build
+  execute_notebooks: "auto"                           # Replace this if you want don't have notebooks with output and you want to add notebook output during build
 
 only_build_toc_files: true                           # Replace this with false if you want to build all files in the book, allowing you to refer to pages which are not included in the table of contents
 
@@ -11,6 +11,7 @@ only_build_toc_files: true                           # Replace this with false i
 html:
   favicon : "figures/bookicon.ico"                   # Replace this with your own favicon
   baseurl :  "https://<user/org>.io/<repo>"          # Replace this with your own URL
+  code_folding: true       # enables folding UI for code cells
 
 sphinx:                                              # Options passed on to the underlying sphinx-parser
   config:
