--- a/book/_config.yml
+++ b/book/_config.yml
@@ -1,4 +1,4 @@
-title: Audio Analysis, Processing, and Synthesis     # Replace this with your own book title
+title: Tangible Audio Analysis, Processing, and Synthesis     # Replace this with your own book title
 author: Randall Ali, built with <a href="https://teachbooks.io">TeachBooks</a>, <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="license noopener noreferrer"">CC BY 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt=""></a>
                                                      # Replace TeachBooks Teams with your own name in the line above
 
@@ -22,7 +22,7 @@ sphinx:                                              # Options passed on to the 
       exclude_patterns: ["**/_*.yml", "**/*.md", "**/*.ipynb"] #exclude files which should not be accessible for live code: https://teachbooks.io/manual/features/live_code.html
     html_theme_options:
       logo:
-        text: [... ]                                 # Replace this with your own book title
+        text: [Tangible Audio Analysis, Processing, and Synthesis]                                 # Replace this with your own book title
         image_light: ASPSlogolight.png               # Put your logo for the light mode here (can be the same as image_dark)
         image_dark: ASPSlogo.png                     # Put your logo for the dark mode here (can be the same as image_light)
       repository_url: "https://github.com/randyaliased/acspjbook/" # Add your own repo URL here
