--- a/book/_config.yml
+++ b/book/_config.yml
@@ -22,7 +22,7 @@ sphinx:                                              # Options passed on to the 
       exclude_patterns: ["**/_*.yml", "**/*.md", "**/*.ipynb"] #exclude files which should not be accessible for live code: https://teachbooks.io/manual/features/live_code.html
     html_theme_options:
       logo:
-        text: [Tangible Audio Analysis, Processing, and Synthesis ]                                 # Replace this with your own book title
+        text: Tangible Audio Analysis, Processing, and Synthesis                                 # Replace this with your own book title
         image_light: ASPSlogolight.png               # Put your logo for the light mode here (can be the same as image_dark)
         image_dark: ASPSlogo.png                     # Put your logo for the dark mode here (can be the same as image_light)
       repository_url: "https://github.com/randyaliased/acspjbook/" # Add your own repo URL here
