--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -18,5 +18,6 @@ parts:
     - file: dasp/overview.md
       sections:
       - file: dasp/01_IR_Conv.ipynb
+      - file: dasp/02_FIR_Design.ipynb
     - file: references.md
     - file: credits.md
