--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -19,5 +19,6 @@ parts:
       sections:
       - file: dasp/01_IR_Conv.ipynb
       - file: dasp/02_FIR_Design.ipynb
+      - file: dasp/03_Z_domain.ipynb
     - file: references.md
     - file: credits.md
