--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -20,5 +20,6 @@ parts:
       - file: dasp/01_IR_Conv.ipynb
       - file: dasp/02_FIR_design.ipynb
       - file: dasp/03_Z_domain.ipynb
+    - file: experimental_notebook.ipynb
     - file: references.md
     - file: credits.md
