--- a/book/_config.yml
+++ b/book/_config.yml
@@ -46,8 +46,9 @@ sphinx:                                              # Options passed on to the 
     - sphinx_image_inverter                          # Inverts images for dark mode https://teachbooks.io/manual/external/Sphinx-Image-Inverter/README.html
     - sphinx_iframes                                 # Eases the embedding of iframes https://teachbooks.io/manual/external/sphinx-iframes/README.html
     - sphinx_exercise                                # Allows you to add exercise boxes to your book https://ebp-sphinx-exercise.readthedocs.io/en/latest/
-    - teachbooks_sphinx_tippy                        # Enables hoover over tips https://teachbooks.io/manual/external/teachbooks-sphinx-tippy/README.html
+    - teachbooks_sphinx_tippy                       # Enables hoover over tips https://teachbooks.io/manual/external/teachbooks-sphinx-tippy/README.html
     - sphinx_named_colors                            # Allows you to use custom colors in your book https://teachbooks.io/manual/external/Sphinx-Named-Colors/README.html
+    - sphinx_accessibility                           # Improves accessibility of your book https://pypi.org/project/sphinx-accessibility/
 
 bibtex_bibfiles: 
   - references.bib                                   # Required for references
