--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ sphinx-exercise
 teachbooks-sphinx-tippy
 sphinx-iframes
 sphinx-named-colors
+sphinx-accessibility
+
 
 # Now list the packages you want to download directly from GitHub
 git+https://github.com/TeachBooks/Sphinx-Thebe
